Add New Colors for Animation in styles.css

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,8 +41,12 @@ table {
     --outer-black-main: #3E4345;
 
     --picton-blue-main: #2AB5FA;
+    --picton-blue-hover: #1f91c5;
+    --picton-blue-active: #1d7ba6;
 
     --columbia-blue-main: #C8D8E0;
+    --columbia-blue-hover: #98a2ab;
+    --columbia-blue-active: #6f767e;
 
     --indigo-dye-main: #17465E;
 
