Implement AboutTabComponent Design

--- a/src/app/components/ui/about-tab/about-tab.component.html
+++ b/src/app/components/ui/about-tab/about-tab.component.html
@@ -1,1 +1,6 @@
-<p>about-tab works!</p>
+ <h1>About This Project</h1>
+ <p> The aim of this project is to demonstrate my skills as an Angular developer and improve myself by building
+     practical projects. Thank you very much for your interest in this project. Be sure to check out other projects
+     on my Github Portfolio. <br />
+     Note: This project is protected under MIT License.
+ </p>
