Implement CitySearchBarComponent Design

--- a/src/app/components/ui/city-search-bar/city-search-bar.component.html
+++ b/src/app/components/ui/city-search-bar/city-search-bar.component.html
@@ -1,1 +1,5 @@
-<p>city-search-bar works!</p>
+<form>
+    <img src="/assets/search_Bar_Icons/search.svg" alt="Search Icon">
+    <input type="text" placeholder="Search for places..." id="citySearchInput"/>
+    <button type="submit">Search</button>
+</form>
