Implement SidebarWeatherInfoComponent Functionality

--- a/src/app/components/ui/sidebar-weather-info/sidebar-weather-info.component.html
+++ b/src/app/components/ui/sidebar-weather-info/sidebar-weather-info.component.html
@@ -1,1 +1,4 @@
-<p>sidebar-weather-info works!</p>
+<div class="container">
+    <img [src]="getIconPath()" [alt]="iconAltText()">
+    <span><ng-content /></span>
+</div>
