--- a/src/app/components/ui/city-search-bar/city-search-bar.component.css
+++ b/src/app/components/ui/city-search-bar/city-search-bar.component.css
@@ -1,3 +1,8 @@
+/* Allows Host Element to Take Full Width of The Parent Flex Container */
+:host {
+    align-self: stretch;
+}
+
 /* Aligning Elements Inside form Element Horizontally */
 form {
     display: flex;
