Implement Basic SidebarContainerComponent Functionality

--- a/src/app/components/containers/sidebar-container/sidebar-container.component.css
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.css
@@ -9,11 +9,23 @@
     padding: 35px 60px 72px 60px;
 }
 
-.container {
+/* Making Both Containers Flex Containers */
+.container, .buttonContainer {
     display: flex;
+}
+
+/* Styling Component Container */
+.container {
     flex-direction: column;
     justify-content: space-between;
+    gap: 100px;
 
     width: 100%;
     height: 100%;
+}
+
+/* Styling Sidebar Button Container */
+.buttonContainer {
+    flex-direction: row;
+    justify-content: space-between;
 }
