Change CitySearchBarComponent Location
 Changed this components location to improve overall project structure and fix bug, where creating two instances of them would result in different input texts being displayed.

--- a/src/app/components/containers/sidebar-container/sidebar-container.component.css
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.css
@@ -18,7 +18,6 @@
 .container {
     flex-direction: column;
     justify-content: space-between;
-    gap: 100px;
 
     width: 100%;
     height: 100%;
@@ -28,4 +27,6 @@
 .buttonContainer {
     flex-direction: row;
     justify-content: space-between;
+
+    margin-top: 100px;
 }
