Set Up MainContainerComponent
 Styled MainContainerComponent to properly align necessary child elements and removed unnecessary html.

--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -1,4 +1,14 @@
 /* Resizing Main Container using flexbox */
 :host {
     flex: 2 0 967px;
+
+    /* Align Items Correctly inside Container */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    padding: 35px 60px 72px;
+
+    /* Used to Avoid Unnecessary Growth of the Element and Overflow */
+    box-sizing: border-box;
 }
