Implement WeatherCard Component Functionality

--- a/src/app/components/ui/weather-card/weather-card.component.html
+++ b/src/app/components/ui/weather-card/weather-card.component.html
@@ -1,1 +1,9 @@
-<p>weather-card works!</p>
+<div class="container">
+    <p>{{ weatherDateTime() }}</p>
+    <div class="weatherIcon"
+        [ngStyle]="{
+            'mask-image': getWeatherIconPath(weatherCode())
+        }"
+    ></div>
+    <p>{{ weatherTemperature() }}&deg;C</p>
+</div>
