Implement RainChanceCard Component Functionality

--- a/src/app/components/ui/weather-highlight-cards/rain-chance-card/rain-chance-card.component.html
+++ b/src/app/components/ui/weather-highlight-cards/rain-chance-card/rain-chance-card.component.html
@@ -1,1 +1,4 @@
-<p>rain-chance-card works!</p>
+<div class="container">
+    <p>Rain Chance</p>
+    <span>{{ rainChance() }}&percnt;</span>
+</div>
