Implement WindStatusCard Component Functionality

--- a/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.html
+++ b/src/app/components/ui/weather-highlight-cards/wind-status-card/wind-status-card.component.html
@@ -1,1 +1,6 @@
-<p>wind-status-card works!</p>
+<div class="container">
+    <p>Wind Status</p>
+    <div class="contentContainer">
+        <span class="windSpeed">{{ windStatus() }}</span><span class="speedUnit">km/h</span>
+    </div>
+</div>
