--- a/src/app/components/containers/main-container/main-container.component.html
+++ b/src/app/components/containers/main-container/main-container.component.html
@@ -1,1 +1,3 @@
-
+<app-weather-card-section sectionTitle="Hour" [weatherInfoType]="WeatherInfoType.Hourly" />
+<app-weather-card-section sectionTitle="Week" [weatherInfoType]="WeatherInfoType.Daily" />
+<app-weather-highlight-section />
