--- a/src/app/components/containers/main-container/main-container.component.css
+++ b/src/app/components/containers/main-container/main-container.component.css
@@ -23,3 +23,21 @@
     overflow-y: auto;
     white-space: nowrap;
 }
+
+/* Styling no city text */
+h1 {
+    /* Setting font rules */
+    font-family: 'Geist', sans-serif;
+    font-size: 55px;
+    font-weight: 600;
+    line-height: 71px;
+
+    /* Adjusting text alignment and width */
+    white-space: wrap;
+    text-align: center;
+    max-width: 640px;
+
+    /* Adjusting text element position */
+    margin-top: 25%;
+    align-self: center;
+}
