Add Missing Comment in main-container.component.html

--- a/src/app/components/containers/main-container/main-container.component.html
+++ b/src/app/components/containers/main-container/main-container.component.html
@@ -1,3 +1,5 @@
+<!-- WeatherData object was assigned a variable in here to reduce sharedWeatherData() signal calls and
+        give necessary data to WeatherTabComponent easily -->
 @let sharedWeatherDataValue = sharedWeatherData();
 @if (sharedWeatherDataValue) {
     <app-weather-card-section sectionTitle="Hour" [weatherInfoType]="WeatherInfoType.Hourly" />
