Implement HeaderToggleButton Functionality

--- a/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.html
+++ b/src/app/components/ui/header-buttons/header-toggle-button/header-toggle-button.component.html
@@ -1,1 +1,5 @@
-<p>header-toggle-button works!</p>
+@if (buttonType() === HeaderToggleButtonType.celsius) {
+    <span>&deg;C</span>
+} @else if (buttonType() === HeaderToggleButtonType.fahrenheit) {
+    <span>&deg;F</span>
+}
