Implement temperatureFormat Pipe

--- a/src/app/components/ui/weather-card/weather-card.component.html
+++ b/src/app/components/ui/weather-card/weather-card.component.html
@@ -11,5 +11,5 @@
             'mask-image': getWeatherIconPath(weatherCode(), weatherDateTime())
         }"
     ></div>
-    <p>{{ weatherTemperature() }}&deg;C</p>
+    <p>{{ weatherTemperature() | temperatureFormat }}</p>
 </div>
