Fix City Name Bug in SidebarContainer Component Template
 Fixed bug, where WeatherData type refactor caused city name to be displayed as [object object].

--- a/src/app/components/containers/sidebar-container/sidebar-container.component.html
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.html
@@ -14,7 +14,7 @@
             <app-weather-tab
                     [weatherTemperature]="weatherDataValue.daily[0].temperatureMax"
                     [currentDate]="weatherDataValue.daily[0].date"
-                    [currentCityName]="weatherDataValue.city"
+                    [currentCityName]="weatherDataValue.city.cityName"
                     [weatherCode]="weatherDataValue.daily[0].weatherCode"
                     [weatherPrecipitationProbability]="weatherDataValue.daily[0].precipitationProbability"
             />
