Implement CityListItem Component Functionality

--- a/src/app/components/ui/city-list-item/city-list-item.component.html
+++ b/src/app/components/ui/city-list-item/city-list-item.component.html
@@ -1,1 +1,8 @@
-<p>city-list-item works!</p>
+<p (click)="listItemClicked()"
+   [class.listItemSelected]="currentListItemSelected()"
+>
+    {{ cityData().cityName }}
+</p>
+<button (click)="deleteButtonClicked()">
+    <div class="buttonIcon"></div>
+</button>
