Migrate to the Refactored WeatherService
 These changes were necessary to migrate to the reworked weather service.

--- a/src/app/components/containers/header-button-container/header-button-container.component.html
+++ b/src/app/components/containers/header-button-container/header-button-container.component.html
@@ -8,4 +8,4 @@
         [buttonSelected]="currentActiveButton() === HeaderToggleButtonType.fahrenheit"
         (onClick)="toggleButtonClicked($event)"
 />
-<app-header-favorite-button [buttonActivated]="false" />
+<app-header-favorite-button [buttonActivated]="favoriteButtonActive()" (onClick)="favoriteButtonClicked()" />
