--- a/src/app/components/containers/sidebar-container/sidebar-container.component.html
+++ b/src/app/components/containers/sidebar-container/sidebar-container.component.html
@@ -23,7 +23,7 @@
             <app-na />
         }
     } @else if (currentSidebarButtonPressed() === SidebarButtonType.Cities) {
-        <p>Cities Tab</p>
+        <app-city-list-tab />
     } @else if (currentSidebarButtonPressed() === SidebarButtonType.About){
         <app-about-tab />
     }
