Add Text to City List Item Button
 Added text to button in CityListItem component, which will be rendered conditionally.

--- a/src/app/components/ui/city-list-item/city-list-item.component.css
+++ b/src/app/components/ui/city-list-item/city-list-item.component.css
@@ -12,6 +12,11 @@ button {
     background: none;
 }
 
+/* Hiding button text in pc view */
+button p {
+    display: none;
+}
+
 /* Setting cursor style */
 p, p.listItemSelected, .buttonIcon {
     cursor: pointer;
